style: fix overflow

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,6 +1,7 @@
 footer {
   background-color: #1d1d1e;
-  width: 100%;
+  width: auto;
+
   display: flex;
 
   gap: 1rem;
