--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,5 +1,6 @@
 header {
-  width: 100%;
+  width: auto;
+
   margin-bottom: 5rem;
   padding: 2rem 4rem;
   display: flex;
