--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -1,6 +1,7 @@
 .hero {
   display: flex;
-  width: 100%;
+  width: auto;
+
   padding: 0 4rem;
   justify-content: space-between;
 
@@ -108,7 +109,8 @@
 }
 
 .banner {
-  width: 100%;
+  width: auto;
+
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -118,7 +120,7 @@
   margin-block: 2rem;
 }
 .showcase_wrapper {
-  width: 100vw;
+  width: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -199,7 +201,8 @@
 }
 
 .about {
-  width: 100%;
+  width: auto;
+
   padding: 2rem 4rem;
   height: 100vh;
 }
